[package]
name = "gc-library"
version = "0.1.0"
edition = "2024"
description = "Generic garbage collection library with multiple algorithms"
license = "MIT"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
libc = { version = "0.2", optional = true }
usdt = { version = "0.5", optional = true }

[features]
default = ["std"]
std = ["libc"]
thread-safe = ["std"]
dtrace = ["usdt", "std"]

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller than unwinding
strip = true         # Remove symbols
